--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
     "display" : "standalone" ,
     "background_color" : "#fff",
     "description": "Showcasing B.Tech projects, expertise in Artificial Intelligence and Data Science, and proficiency in web development, machine learning, and deep learning.",
-    "id" : "https://saisurya7860.github.io/Surya-s-Portfolio/",
+    "id": "Surya B",
+    "lang": "en-US",
     "theme_color" : "#000",
     "orientation" :"portrait-primary",
 
