--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "display" : "standalone" ,
     "background_color" : "#fff",
     "description": "Showcasing B.Tech projects, expertise in Artificial Intelligence and Data Science, and proficiency in web development, machine learning, and deep learning.",
-    "id": "Surya B",
+    "id": "Surya",
     "lang": "en-US",
     "theme_color" : "#000",
     "orientation" :"portrait-primary",
