--- a/manifest.json
+++ b/manifest.json
@@ -10,26 +10,26 @@
     "theme_color" : "#000",
     "orientation" :"portrait-primary",
 
-    "icons" : [
-        {
-            "src" : "assets/Surya-logo 192x192.png",
-            "type" : "image/png",
-            "sizes": "72x72"
-        },
-        {
-            "src" : "/assets/Surya-logo96x96.png",
-            "type" : "image/png",
-            "sizes": "96x96"
-        },
-        {
-            "src" : "/assets/Surya-logo144x144.png",
-            "type" : "image/png",
-            "sizes": "144x144"
-        },
-        {
-            "src" : "/assets/Surya-logo.png",
-            "type" : "image/png",
-            "sizes": "192x192"
-        }
-    ]
+    "icons": [
+    {
+      "src": "assets/Surya-logo192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/Surya-logo192x192.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/Surya-logo192x192.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/Surya-logo192x192.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
